Add Forms and Screenreader Only pages

--- a/public/forms.html
+++ b/public/forms.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>a11y SR Demo Tables</title>
+  <title>a11y SR Demo Forms</title>
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="assets/tables.css">
+  <link rel="stylesheet" type="text/css" href="assets/forms.css">
 </head>
 <body>
-  <div id="main" class="container"></div>
+  <div id='main' class="container"></div>
   <script src="assets/common.js"></script>
-  <script src="assets/tables.js"></script>
+  <script src="assets/forms.js"></script>
 </body>
 </html>
